developerProject/force-app/main/default/objects/OJSERLIB__Application_Supplier_Detail__c/OJSERLIB__Application_Supplier_Detail__c.object-meta.xml
<CustomObject>
    <label>Application Supplier Detail</label>
    <nameField>
        <label>Application Supplier Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Supplier Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>