developerProject/force-app/main/default/objects/OJSERLIB__Application_Supplier_Detail__c/fields/OJSERLIB__Application__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Application__c</fullName>
    <label>Application</label>
    <referenceTo>OJSERLIB__Application__c</referenceTo>
    <relationshipLabel>Application Supplier Details</relationshipLabel>
    <relationshipName>Application_Supplier_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>