developerProject/force-app/main/default/objects/OJSERLIB__Application_Supplier_Detail__c/fields/OJSERLIB__Supplier_name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Supplier_name__c</fullName>
    <label>Supplier name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>